@@ -1,0 +1,19 @@
+\indexentry{xa}{1}
+\indexentry{xb}{1}
+\indexentry{xc}{1}
+\indexentry{ya!x}{1}
+\indexentry{ya!y}{1}
+\indexentry{ya!z}{1}
+\indexentry{yb!x!x}{1}
+\indexentry{yb!x!y}{1}
+\indexentry{yb!x!z}{1}
+\indexentry{a}{1}
+\indexentry{a!a}{2}
+\indexentry{a!a!a}{3}
+\indexentry{ab}{6}
+\indexentry{ad!a}{8}
+\indexentry{ad!b}{9}
+\indexentry{ae!a!a}{11}
+\indexentry{ae!b!b}{12}
+\indexentry{pa}{21}
+\indexentry{pa!qa!ra}{22}
