@@ -1,0 +1,10 @@
+item_0 "\n  \\item_0 "
+item_1 "\n    \\item_1 "
+item_2 "\n      \\item_2 "
+item_01 "\n    \\item_01 "
+item_12 "\n      \\item_12 "
+item_x1 "\n    \\item_x1 "
+item_x2 "\n      \\item_x2 "
+delim_0 "(0) "
+delim_1 "(1) "
+delim_2 "(2) "
