@@ -1,0 +1,6 @@
+\indexentry{a}{1}
+\indexentry{a!a}{2}
+\indexentry{a!a!a}{3}
+\indexentry{a!a!a!a}{4}
+\indexentry{a!a!a!a!a}{5}
+\indexentry{a!a!a!a!a!a}{6}
