@@ -1,0 +1,53 @@
+\indexentry{@illegal-null-field}{9}
+\indexentry{!illegal-null-field}{10}
+\indexentry{too-may-ats@x@}{10}
+\indexentry{too-may-bangs!x!y!z}{10}
+\indexentry{too-may-bars|x|}{10}
+\indexentry{hoge!@illegal-null-field}{9}
+\indexentry{hoge!fuga!@illegal-null-field}{9}
+\indexentry{haha!@!illegal-null-field}{10}
+\indexentry{illegal-null-field-in-bangs!p!@r}{10}
+\indexentry{illegal-null-field-in-bangs!!r}{10}
+\indexentry{fff!p!q@r@s}{11}
+\indexentry{ggg!p!q|r|}{12}
+\indexentry{hhh|t@p|s}{13}
+\indexentry{iii|t!p|s}{14}
+
+\indexentry{incons-entries|xx}{6}
+\indexentry{incons-entries}{6}
+
+\indexentry{implicit-range}{10}
+\indexentry{implicit-range}{11}
+\indexentry{implicit-range}{12}
+
+\indexentry{missing(|)}{6}
+\indexentry{missing)|(}{6}
+
+\indexentry{ok-encaps|(ii}{5}
+\indexentry{ok-encaps|ii}{6}
+\indexentry{ok-encaps|)}{7}
+
+\indexentry{bad-encaps|(ii}{5}
+\indexentry{bad-encaps|ii}{6}
+\indexentry{bad-encaps|)iii}{7}
+
+\indexentry{incons-encaps|(}{5}
+\indexentry{incons-encaps|ii}{6}
+\indexentry{incons-encaps|)}{7}
+
+\indexentry{incons-encaps2|(}{5}
+\indexentry{incons-encaps2|ii}{5}
+\indexentry{incons-encaps2|)}{5}
+
+\indexentry{mixed-range|(}{i}
+\indexentry{mixed-range|)}{6}
+
+\indexentry{mixed-range1|(}{i}
+\indexentry{mixed-range1}{iv}
+\indexentry{mixed-range1}{3}
+\indexentry{mixed-range1|)}{6}
+
+\indexentry{mixed-range2|(}{i}
+\indexentry{mixed-range2|xx}{ii}
+\indexentry{mixed-range2|yy}{3}
+\indexentry{mixed-range2|)}{6}
